Split the code into seperate c and header files, also main program now works on stack only!

--- a/sorting_algorithms/bubblesort/Makefile
+++ b/sorting_algorithms/bubblesort/Makefile
@@ -1,2 +1,8 @@
-bubblesort.exe: bubblesort.c
-	gcc -o bubblesort.exe bubblesort.c -lSDL2 -lSDL2main -g
+CC = gcc
+CFLAGS = -I/usr/include/SDL2
+DEPS = sorting_array.h SDL_rendering.h
+LDLIBS = -lSDL2main -lSDL2
+
+bubblesort.exe: bubblesort.c sorting_array.c SDL_rendering.c
+	$(CC) -o bubblesort.exe bubblesort.c sorting_array.c SDL_rendering.c $(LDLIBS)
+
